--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE HTML>
 <!--
 	
---><html><head><title></title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
+--><html>
+	
+	<head>
+		<title>
+			<link href="https://erickmbg.github.io/ZLG/style.css" rel="stylesheet" />
+			<script src="https://erickmbg.github.io/ZLG/script.js"><script>
+		</title><meta charset="utf-8"><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="assets/css/main.css"></head><body>
 		<div class="page-wrap">
 
 			<!-- Nav -->
